--- a/src/app/components/todos/todos.component.css
+++ b/src/app/components/todos/todos.component.css
@@ -1,14 +1,34 @@
 .todos {
     width: 45%;
     margin: auto;
+    margin-top: 1em;
 }
 
 .todo {
-    background-color: beige;
+    background-color: #c9eddd;
     display: flex;
     justify-content: left;
     padding-top: 1em;
     padding-bottom: 1em;
+    align-items: center;
+}
+
+.todo-input {
+    padding: 1em;
+}
+
+.todo-submit {
+    padding: 1em;
+    color: white;
+    background-color: darkslategrey;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.delete {
+    padding: 0.5em;
+    color: white;
+    background-color: darkslategrey;
 }
 
 .id {
@@ -26,4 +46,23 @@
     flex: 1;
     justify-content: flex-end;
     margin-right: 1em;
+}
+
+.done > .content {
+    color: gray;
+    text-decoration: line-through;
+}
+
+.odd {
+    background-color: #d2ebe0;
+}
+
+@media screen and (max-width: 650px){
+    .todos {
+        width: 100%;
+    }
+    form {
+        display: flex;
+        justify-content: center;
+    }
 }
